# project_mealy

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  ORDER.md  README.md  REQUIREMENTS.md  SECURITY.md  about.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  live-smoke.yml  release.yml
apps/: README.md
apps/mealy-tui/: Cargo.toml
apps/mealyctl/: Cargo.toml  README.md
apps/mealyctl/assets/: dashboard.html
apps/mealyctl/src/: chat_picker.rs  dashboard.rs  lifecycle.rs  main.rs
apps/mealyctl/tests/: browser_configuration.rs  chat_pty.rs  dashboard.rs  mcp_configuration.rs  memory_workflow.rs  migration_package_rollback.rs  provider_configuration.rs  restore_activation.rs  skill_configuration.rs
apps/mealyd/: Cargo.toml  README.md
apps/mealyd/src/: agent.rs  anthropic_provider.rs  backend.rs  config.rs  effect_runtime.rs  main.rs  responses_provider.rs  store_runtime.rs
apps/mealyd/tests/: discord_channel.rs  load_recovery.rs  phase1_recovery.rs  phase2_attempt_recovery.rs  phase2_cancellation.rs  phase2_read_only_loop.rs  phase3_effect_approval.rs  phase4_validation.rs  phase5_memory_context.rs  phase6_channel_boundary.rs  phase6_extension_boundary.rs  phase7_operations.rs  real_provider.rs  soak.rs  telegram_channel.rs
archive/macos-preview-v0.1.0/: README.md
crates/: README.md
crates/mealy-agent/: Cargo.toml
crates/mealy-agent/src/: lib.rs
crates/mealy-api/: Cargo.toml  README.md
crates/mealy-api/src/: lib.rs
crates/mealy-application/: Cargo.toml  README.md
crates/mealy-application/src/: agent.rs  agent_effect.rs  approval.rs  artifact.rs  browser.rs  channel.rs  compaction.rs  context.rs  daemon_config.rs  delegation.rs  digest.rs  discord.rs  effect_ledger.rs  executor.rs  extension.rs  fixture_write.rs  lib.rs  mcp.rs  memory.rs  operations.rs  outbox.rs  policy.rs  ports.rs  process_run.rs  promotion.rs  provider.rs  provider_config.rs  recovery.rs  schedule.rs  scheduler.rs  sessions.rs  startup.rs  telegram.rs  timeline.rs  tools.rs  validation.rs  web_config.rs  workspace_create.rs  workspace_manage.rs
crates/mealy-artifacts/: Cargo.toml
crates/mealy-context/: Cargo.toml
crates/mealy-context/src/: lib.rs
crates/mealy-domain/: Cargo.toml  README.md
crates/mealy-domain/src/: approval.rs  compaction.rs  delegation.rs  effect.rs  extension.rs  id.rs  lib.rs  memory.rs  policy.rs  scheduler.rs  session.rs  skill.rs  task.rs  tool.rs  validation.rs
crates/mealy-domain/tests/: lifecycle_properties.rs
crates/mealy-infrastructure/: Cargo.toml  README.md
crates/mealy-infrastructure/migrations/: 0001_foundation.sql  0002_phase1_runtime.sql  0003_phase1_services.sql  0004_agent_loop.sql  0005_effect_ledger.sql  0006_effect_command_receipts.sql  0007_agent_effect_loop.sql  0008_validation_delegation.sql  0009_memory_compaction.sql  0010_extension_boundary.sql  0011_operational_hardening.sql  0012_agent_schedules.sql  0013_telegram_channel.sql  0014_discord_dm_channel.sql  0015_usage_reporting.sql  0016_context_manifest_bundles.sql
crates/mealy-infrastructure/src/: artifact.rs  browser.rs  browser_bundle.rs  channel_secret.rs  codex_app_server.rs  extension_host.rs  fixture.rs  lib.rs  maintenance.rs  mcp.rs  provider_secret.rs  sandbox.rs  skill_package.rs  sqlite.rs  subscription_cli.rs  system.rs  trusted_executable.rs  web.rs  workspace.rs
crates/mealy-infrastructure/src/sqlite/: agent.rs  agent_effect.rs  artifact.rs  channel.rs  compaction.rs  context.rs  delegation.rs  discord.rs  effects.rs  extension.rs  memory.rs  operations.rs  outbox.rs  promotion.rs  recovery.rs  schedule.rs  scheduler.rs  sessions.rs  telegram.rs  timeline.rs  validation.rs
crates/mealy-infrastructure/tests/: browser_runtime.rs  durable_admission.rs  extension_host.rs  mcp_stdio.rs  outbox_delivery.rs  phase1_runtime.rs  sandbox_executor.rs  web_live.rs
crates/mealy-protocol/: Cargo.toml  README.md
crates/mealy-protocol/src/: lib.rs
crates/mealy-testkit/: Cargo.toml  README.md
crates/mealy-testkit/src/: lib.rs
crates/mealy-tools/: Cargo.toml
crates/mealy-tools/src/: lib.rs
docs/: API.md  CI_CD.md  CLI.md  DOMAIN_MODEL.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  LINUX_REPOSITORIES.md  LINUX_SUPPORT.md  OPERATIONS.md  PRODUCTION_READINESS.md  QUICKSTART.md  README.md  RELEASE.md  REQUIREMENTS_COVERAGE.md  TESTING.md  THREAT_MODEL.md
migrations/: README.md
packaging/: assemble-release.sh  build-arch-package.sh  build-deb.sh  build-macos-preview.py  build-release.sh  build-rpm.sh  build-signed-linux-repositories.sh  install-release.sh  install.sh  normalize-sbom.sh  test-arch-packaging.sh  test-deb-packaging.sh  test-macos-packaging.sh  test-packaging.sh  test-rpm-packaging.sh  test-signed-linux-repositories.sh  third-party-licenses.hbs  validate-signed-linux-repositories.sh  verify-release-payload.sh
schemas/: README.md
scripts/: build-release-binaries.sh  dashboard-smoke.sh  fetch-browser-runtime.sh  fetch-cargo-deny.sh  fetch-release-soak-subject.sh  fetch-zizmor.sh  generate-third-party-licenses.sh  installed-arch-smoke.sh  installed-deb-smoke.sh  installed-package-smoke.sh  installed-rpm-smoke.sh  installed-update-rollback-smoke.sh  macos-control-plane-smoke.sh  macos-zsh-preview-smoke.zsh  preflight-release-environments.sh  prepare-bwrap-boundary.sh  render-release-notes.sh  run-soak.sh  select-live-provider-acceptance.sh  select-protected-ci-run.sh  system-package-runtime-smoke.sh  systemd-service-smoke.sh  test-documentation-validator.sh  test-live-provider-acceptance-selector.sh  test-protected-ci-run-selector.sh  test-public-license-validator.sh  test-release-environment-preflight.sh  test-release-notes.sh  test-release-soak-subject-fetch.sh  test-release-soak-validator.sh  test-release-tag-validator.sh  validate-documentation.py  validate-public-license.sh  validate-release-soak.sh  validate-release-tag.sh
tests/: README.md
web/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  (+2 more)
(+70 files in other folders)
