[workspace]
resolver = "3"
members = [
    "apps/mealyd",
    "apps/mealyctl",
    "crates/mealy-domain",
    "crates/mealy-application",
    "crates/mealy-infrastructure",
    "crates/mealy-protocol",
    "crates/mealy-api",
    "crates/mealy-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license-file = "LICENSE"
repository = "https://github.com/Amekn/project_mealy"

[workspace.dependencies]
mealy-api = { path = "crates/mealy-api" }
mealy-application = { path = "crates/mealy-application" }
mealy-domain = { path = "crates/mealy-domain" }
mealy-infrastructure = { path = "crates/mealy-infrastructure" }
mealy-protocol = { path = "crates/mealy-protocol" }
mealy-testkit = { path = "crates/mealy-testkit" }
proptest = "1.7.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
