[workspace]
resolver = "3"
members = [
    "apps/mealyd",
    "apps/mealyctl",
    "crates/mealy-domain",
    "crates/mealy-application",
    "crates/mealy-infrastructure",
    "crates/mealy-protocol",
    "crates/mealy-api",
    "crates/mealy-testkit",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
license-file = "LICENSE"
repository = "https://github.com/Amekn/mealy"
publish = false

[workspace.dependencies]
async-stream = "0.3.6"
argon2 = "0.5.3"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio", "tracing"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.1"
croner = "=3.0.1"
dunce = "1.0.5"
eventsource-stream = "0.2.3"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
futures-util = "0.3.32"
getrandom = "0.4.3"
hmac = "0.13.0"
jsonschema = { version = "0.47.0", default-features = false }
mealy-api = { path = "crates/mealy-api", version = "=0.2.0" }
mealy-application = { path = "crates/mealy-application", version = "=0.2.0" }
mealy-domain = { path = "crates/mealy-domain", version = "=0.2.0" }
mealy-infrastructure = { path = "crates/mealy-infrastructure", version = "=0.2.0" }
mealy-protocol = { path = "crates/mealy-protocol", version = "=0.2.0" }
mealy-testkit = { path = "crates/mealy-testkit", version = "=0.2.0" }
proptest = "1.7.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "query", "rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
rustix = { version = "1.1.4", features = ["fs", "process", "termios"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.3", features = ["limit", "load-shed", "util"] }
tower-http = { version = "0.7.0", features = ["cors", "limit", "request-id", "sensitive-headers", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
subtle = "2.6.1"
tungstenite = { version = "0.30.0", default-features = false, features = ["handshake"] }
url = "2.5.8"
uuid = { version = "1.23.3", features = ["serde", "v7"] }
zeroize = "1.8.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = "thin"
strip = "symbols"

# Keep line-table diagnostics for local failures without embedding full DWARF into every test
# executable. The daemon deliberately enforces a 256 MiB upper bound on its content-pinned
# sandbox worker; full debug information can otherwise make the all-in-one test daemon exceed
# that security bound even though production release artifacts are stripped.
[profile.dev]
debug = 1

[profile.test]
debug = 1

# Real-browser conformance intentionally hashes the complete 200+ MiB pinned runtime at setup,
# startup, and before every call. Keep that security boundary practical in otherwise-unoptimized
# test binaries; release builds are already optimized and are unaffected by this override.
[profile.test.package.sha2]
opt-level = 3
