[package]
name = "mealyctl"
description = "Local administration and client CLI for Mealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
mealy-protocol.workspace = true

[lints]
workspace = true
