[package]
name = "mealyctl"
description = "Local administration and client CLI for Mealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
getrandom.workspace = true
mealy-application.workspace = true
mealy-domain.workspace = true
mealy-infrastructure.workspace = true
mealy-protocol.workspace = true
reqwest.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
dunce.workspace = true

[lints]
workspace = true

[dev-dependencies]
axum.workspace = true
rustix = { workspace = true, features = ["pty"] }
rusqlite.workspace = true
tempfile = "3.27.0"
