[package]
name = "mealyd"
description = "Trusted Mealy daemon composition root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
mealy-api.workspace = true
mealy-application.workspace = true
mealy-infrastructure.workspace = true

[lints]
workspace = true
