[package]
name = "mealyd"
description = "Trusted Mealy daemon composition root"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
publish.workspace = true
default-run = "mealyd"

[[bin]]
name = "mealy-sample-extension"
path = "../../crates/mealy-infrastructure/src/bin/mealy-fixture-worker.rs"

[[bin]]
name = "mealyd-mcp-fixture-server"
path = "../../crates/mealy-infrastructure/src/bin/mealy-mcp-fixture-server.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
clap.workspace = true
getrandom.workspace = true
mealy-api.workspace = true
mealy-application.workspace = true
mealy-domain.workspace = true
mealy-infrastructure.workspace = true
mealy-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["process"] }

[dev-dependencies]
eventsource-stream.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
tempfile = "3.27.0"

[lints]
workspace = true
