[package]
name = "mealy-api"
description = "Authenticated HTTP and timeline adapter for Mealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
mealy-application.workspace = true
mealy-protocol.workspace = true

[lints]
workspace = true
