[package]
name = "mealy-api"
description = "Authenticated HTTP and timeline adapter for Mealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
mealy-application.workspace = true
mealy-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true
