[package]
name = "mealy-application"
description = "Mealy use cases, recovery planning, and infrastructure ports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
hmac.workspace = true
mealy-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
