[package]
name = "mealy-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
mealy-artifacts = { path = "../mealy-artifacts" }
mealy-core = { path = "../mealy-core" }
mealy-events = { path = "../mealy-events" }
serde.workspace = true
