[package]
name = "mealy-infrastructure"
description = "SQLite, artifact, process, provider, and OS adapters for Mealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
mealy-application.workspace = true
mealy-domain.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.4", features = ["process"] }

[dev-dependencies]
mealy-testkit.workspace = true
tempfile = "3.27.0"

[lints]
workspace = true
