[package]
name = "mealy-protocol"
description = "Versioned transport DTOs for Mealy clients and adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
mealy-domain.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
