[package]
name = "mealy-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
mealy-core = { path = "../mealy-core" }
mealy-provider = { path = "../mealy-provider" }
mealy-store = { path = "../mealy-store" }
serde_json.workspace = true
