[package]
name = "mealy-testkit"
description = "Deterministic test support for Mealy scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
mealy-application.workspace = true
mealy-domain.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
