[package]
name = "mealy-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
mealy-core = { path = "../mealy-core" }
mealy-policy = { path = "../mealy-policy" }
serde.workspace = true
serde_json.workspace = true
